--- a/kube/DockerFileBackApi
+++ b/kube/DockerFileBackApi
@@ -1,11 +1,14 @@
-FROM pytorch/pytorch:latest
+FROM python:3.12
 
 WORKDIR /some
 
 RUN pip install uvicorn
-RUN pip install transformers
 RUN pip install fastapi
 RUN pip install sqlalchemy
-COPY ./api ./
+RUN pip install aiohttp
+RUN pip install asyncio
+RUN pip install pydantic
+
+COPY ./backend/products ./
 EXPOSE  8000
-CMD ["python", "-m", "uvicorn", "sentiment_analyzer.api:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "main.py"]
