--- a/kube/DockerFileBackApi
+++ b/kube/DockerFileBackApi
@@ -8,7 +8,11 @@ RUN pip install sqlalchemy
 RUN pip install aiohttp
 RUN pip install asyncio
 RUN pip install pydantic
+RUN pip install numpy
+RUN pip install asyncpg
+RUN pip install psycopg2
 
 COPY ./backend/products ./
 EXPOSE  8000
+CMD ["alembic", "upgrade head"]
 CMD ["python", "main.py"]
