--- a/kube/DockerFileBackApi
+++ b/kube/DockerFileBackApi
@@ -11,6 +11,7 @@ RUN pip install pydantic
 RUN pip install numpy
 RUN pip install asyncpg
 RUN pip install psycopg2
+RUN pip install python3-dotenv
 
 COPY ./backend/products ./
 EXPOSE  8000
