--- a/kube/DockerfileBackML
+++ b/kube/DockerfileBackML
@@ -7,6 +7,8 @@ RUN pip install transformers
 RUN pip install fastapi
 RUN pip install sqlalchemy
 RUN pip install aiohttp
+RUN pip install python3-dotenv
+
 COPY ./backend/ml_model ./
 EXPOSE  8001
 CMD ["python", "main.py"]
