--- a/kube/DockerFileBackApi
+++ b/kube/DockerFileBackApi
@@ -13,6 +13,7 @@ RUN pip install psycopg2
 RUN pip install python-dotenv
 RUN pip install alembic
 RUN pip install sqlalchemy
+RUN pip install aiokafka
 
 COPY ./backend/products ./
 EXPOSE  8000
