--- a/kube/DockerfileBackML
+++ b/kube/DockerfileBackML
@@ -8,6 +8,7 @@ RUN pip install fastapi
 RUN pip install sqlalchemy
 RUN pip install aiohttp
 RUN pip install python-dotenv
+RUN pip install aiokafka
 
 COPY ./backend/ml_model ./
 EXPOSE  8001
