--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_DOMAIN=http://localhost:30006/api/v1
+NEXT_PUBLIC_DOMAIN=http://localhost:30006/api/v3
+NEXT_PUBLIC_ADD_DOMAIN=http://localhost:30006/api/v2
